<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stella_teleop</name>
  <version>2.1.2</version>
  <description>
    Teleoperation node using keyboard for STELLA
  </description>
  <maintainer email="lab@ntrex.co.kr">ntrex</maintainer>
  <license>Apache 2.0</license>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
